test/foof/errors/undefined.foo
a
(define (f a b) (* a b c))
(f d)
(e f)
(if (g h)
    j
    k)
'l
`m
`,n
`(o p ,@q r)
(let ((s t))
  (* s t))
(letrec ((u v)
         (v w))
  (* u v w))
